# mil

./: .gitmodules
SubjuGator/command/sub8_launch/launch/: initial_pois.yaml  sub8.launch
SubjuGator/command/sub8_petri_net_missions/: CMakeLists.txt  package.xml
SubjuGator/command/sub8_petri_net_missions/include/sub8_missions2/: start_gate.hpp
SubjuGator/command/sub8_petri_net_missions/include/sub8_petri_net_missions/: start_gate.hpp
SubjuGator/command/sub8_petri_net_missions/src/start_gate/: start_gate.cpp  start_gate_net.dot
mil_common/mil_petri_net_missions/: CMakeLists.txt  bash_aliases.sh  package.xml
mil_common/mil_petri_net_missions/include/mil_petri_net_missions/: petri_net.hpp
mil_common/mil_petri_net_missions/src/: petri_net.cpp
scripts/: setup.bash
